@@ -3,6 +3,7 @@
 Bugs fixes:
 
 - Fixes for 1.8.6 compatibility (issue #2)
+- guard init <guard-name> no more need Gemfile presence but open_gem is required now (issue #3)
 
 == 0.2.0.beta.1 (Oct 17, 2010)
 
